--- a/slut.html
+++ b/slut.html
@@ -36,6 +36,20 @@
 
  
   <section id="kontakt">
+<p>Här hittar du oss:</p>
+<div style="width: 100%; height: 300px; margin-bottom: 20px;">
+  <iframe 
+    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8186.421057934558!2d18.6962479!3d59.7678321!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x465ef07b108e0a71%3A0x8535103095d48b94!2sLissl%C3%B6%2C%20Norrt%C3%A4lje!5e0!3m2!1ssv!2sse!4v1716039569334!5m2!1ssv!2sse" 
+    width="100%" 
+    height="100%" 
+    style="border:0;" 
+    allowfullscreen="" 
+    loading="lazy" 
+    referrerpolicy="no-referrer-when-downgrade">
+  </iframe>
+</div>
+</div>
+
     <h2>Kontakt</h2>
     <p>Fyll i formuläret nedan för att kontakta oss:</p>
     <form>
