mobil, bilder bla

--- a/butik.html
+++ b/butik.html
@@ -10,10 +10,10 @@
     <h1>Lisslö Butik</h1>
     <nav>
       <ul>
-        <li><a href="index.html">Hem</a></li>
+        <li><a href="slut.html#hem">Hem</a></li>
         <li><a href="slut.html">Om Lisslö</a></li>
         <li><a href="butik.html">Butik</a></li>
-        <li><a href="#kontakt">Kontakt</a></li>
+        <li><a href="slut.html#kontakt">Kontakt</a></li>
       </ul>
     </nav>
   </header>
