--- a/slut.html
+++ b/slut.html
@@ -22,16 +22,16 @@
  
   <section id="bildspel">
     <div class="slideshow-container">
-      <img class="slide" src="Skärmbild 2025-05-01 161241.png" alt="Bild 1" />
-      <img class="slide" src="bild2.jpg" alt="Bild 2" />
-      <img class="slide" src="bild3.jpg" alt="Bild 3" />
+      <img class="slide" src="images/Skärmbild 2025-05-01 161241.png" alt="Bild 1" />
+      <img class="slide" src="images/IMG_0117.jpg" alt="Bild 2" />
+      <img class="slide" src="images/IMG_3255.jpg" alt="Bild 3" />
     </div>
   </section>
 
   
   <section id="hem">
     <h2>Hem</h2>
-    <p>Välkommen till vår förening! Här hittar du information om aktiviteter, evenemang och vår gemenskap.</p>
+    <p>Välkommen till vår förening! Här hittar du information om bla aktiviteter och evenemang.</p>
   </section>
 
  
