kunna skicka beställning

--- a/butik.html
+++ b/butik.html
@@ -35,6 +35,10 @@
       <h2>Din varukorg</h2>
       <ul id="cart-list"></ul>
       <p id="total">Totalt: 0 kr</p>
+      <form id="order-form">
+        <input type="hidden" id="order-data" name="order-data" />
+        <button type="button" onclick="sendOrder()">Skicka beställning</button>
+      </form>
     </section>
   </main>
 
